#project(ParaToSPHARMMeshCLP)

set(ParaToSPHARMMeshCLP_SOURCE itkMeshTovtkPolyData.cxx vtkPolyDataToitkMesh.cxx)
set(ParaToSPHARMMeshCLP_LIBRARIES
       ${ITK_LIBRARIES}
       ${VTK_LIBRARIES}
       ShapeIO SpatialObject ShapeAlgorithms SpatialObject
       ${CLAPACK_LIBRARIES}
       )

SEMMacroBuildCLI(
NAME ParaToSPHARMMeshCLP
EXECUTABLE_ONLY
ADDITIONAL_SRCS ${ParaToSPHARMMeshCLP_SOURCE}
TARGET_LIBRARIES ${ParaToSPHARMMeshCLP_LIBRARIES}
LINK_DIRECTORIES ""
INCLUDE_DIRECTORIES ""
RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
INSTALL_RUNTIME_DESTINATION ${${LOCAL_PROJECT_NAME}_CLI_INSTALL_RUNTIME_DESTINATION}
INSTALL_LIBRARY_DESTINATION ${${LOCAL_PROJECT_NAME}_CLI_INSTALL_LIBRARY_DESTINATION}
INSTALL_ARCHIVE_DESTINATION ${${LOCAL_PROJECT_NAME}_CLI_INSTALL_ARCHIVE_DESTINATION}
)

# GENERATECLP(ParaToSPHARMMeshCLP_SOURCE ParaToSPHARMMeshCLP.xml)

# add_executable(ParaToSPHARMMeshCLP ${ParaToSPHARMMeshCLP_SOURCE})

# target_link_libraries( ParaToSPHARMMeshCLP
#        ${ITK_LIBRARIES}
#        ${VTK_LIBRARIES}
#        ShapeIO SpatialObject ShapeAlgorithms SpatialObject
#        ${CLAPACK_LIBRARIES}
#        )

# if( NOT SPHARM-PDM_BUILD_SLICER_EXTENSION )
#   install(TARGETS
#     ParaToSPHARMMeshCLP
#     BUNDLE DESTINATION  bin
#     RUNTIME DESTINATION bin
#     LIBRARY DESTINATION lib
#     ARCHIVE DESTINATION lib/static  
#   )
# else()
#   install(TARGETS ParaToSPHARMMeshCLP DESTINATION ${${LOCAL_PROJECT_NAME}_CLI_INSTALL_RUNTIME_DESTINATION} )
# endif()
