CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(RadiusToMesh)

FIND_PACKAGE(VTK REQUIRED)
IF (VTK_FOUND)
  INCLUDE(${VTK_USE_FILE})
ELSE(VTK_FOUND)
   MESSAGE(FATAL_ERROR, "VTK not found. Please set VTK_DIR.")
ENDIF (VTK_FOUND)

FIND_PACKAGE(GenerateCLP REQUIRED)
IF (GenerateCLP_FOUND)
  INCLUDE(${GenerateCLP_USE_FILE})
ELSE(GenerateCLP_FOUND)
   MESSAGE(FATAL_ERROR, "GenerateCLP not found. Please set GenerateCLP_DIR.")
ENDIF (GenerateCLP_FOUND)

GENERATECLP(RadiusToMesh.cxx RadiusToMesh.xml)
ADD_EXECUTABLE(RadiusToMesh RadiusToMesh.cxx)

TARGET_LINK_LIBRARIES(RadiusToMesh   ${VTK_LIBRARIES} )

if( EXTENSION_SUPERBUILD_BINARY_DIR )
  install(TARGETS RadiusToMesh DESTINATION ${NOCLI_INSTALL_DIR}/ExternalBin )
endif()